# silverscreen

./: .gitignore  CLAUDE.md  README.md  TAURI_MIGRATION_PLAN.md  index.html  package-lock.json  package.json  pubspec.yaml  sample-urls copy.txt  sample-urls.txt  silverscreen.config.js  tsconfig.app.json
android/app/: build.gradle.kts
examples/: customPlugin.js  silverscreen.config.custom.js  silverscreen.config.js  silverscreen.config.minimal.js  withCookieAndSandboxPlugins.js
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: capture_result.dart  session.dart
lib/screens/: home_screen.dart  home_screen_macos.dart  home_screen_windows.dart
lib/services/: screenshot_service.dart  storage_service.dart
lib/state/: capture_state.dart  session_state.dart
lib/widgets/: capture_toolbar.dart  gallery_view.dart  session_list.dart  session_settings.dart  url_list.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
plugins/: cookiePlugin.js  sandboxPlugin.js
scripts/: capture.js  package.json
src/: configLoader.js  generateManifest.js  screenshotter.js  urlReader.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/capture/: configLoader.js  generateManifest.js  screenshotter.js  urlReader.js
src/client/: App.tsx  api.ts  (+3 more)
test/: widget_test.dart
viewer/: .gitignore  package-lock.json  package.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+29 files in other folders)
